--- a/delete/package.json
+++ b/delete/package.json
@@ -2,7 +2,7 @@
   "name": "delete",
   "version": "1.0.0",
   "description": "",
-  "main": "dog.schema.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
